prevent links from line wrapping

--- a/documentation/css/style.css
+++ b/documentation/css/style.css
@@ -260,6 +260,10 @@ button:active {
 	color: #ccc;
 }
 
+.links a {
+	white-space: nowrap;
+}
+
 h1 {
 	font-size: 2em;
 	margin: 1em 0 0.5em 0;
